--- a/package.json
+++ b/package.json
@@ -1,29 +1,16 @@
 {
-  "name": "airline-management-system",
+  "name": "confusion",
   "version": "1.0.0",
-  "description": "This Is SE Project",
+  "description": "This is a website for Ristorante Con Fusion",
   "main": "index.html",
   "scripts": {
     "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ZainZulfiqarMaknojia/Airline-Management-System.git"
-  },
-  "author": "Zain Zulfiqar",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ZainZulfiqarMaknojia/Airline-Management-System/issues"
-  },
-  "homepage": "https://github.com/ZainZulfiqarMaknojia/Airline-Management-System#readme",
-  "devDependencies": {
-    "lite-server": "^2.5.4"
-  },
-  "dependencies": {
-    "bootstrap": "^4.0.0",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.12.9"
+    "devDependencies": {
+    "lite-server": "^2.3.0"
   }
 }
